# cdb-to-3dtiles

./: .clang-format  .gitignore  .gitmodules  CHANGES.md  CMakeLists.txt  Dockerfile  LICENSE.md  README.md  ThirdParty.json  conanfile.txt  package.json
Benchmark/: CMakeLists.txt
CDBTo3DTiles/: CDB.cpp  CDB.h  CDBTo3DTiles.cpp  CDBTo3DTiles.h  CMakeLists.txt  tiny_gltf.h
CDBTo3DTiles/include/: CDBTo3DTiles.h  Utility.h
CDBTo3DTiles/src/: CDB.cpp  CDB.h  CDBAttributes.cpp  CDBAttributes.h  CDBDataset.cpp  CDBDataset.h  CDBElevation.cpp  CDBElevation.h  CDBGeoCell.cpp  CDBGeoCell.h  CDBGeometryVectors.cpp  CDBGeometryVectors.h  CDBImagery.cpp  CDBImagery.h  CDBMaterials.cpp  CDBMaterials.h  CDBModels.cpp  CDBModels.h  CDBRMDescriptor.cpp  CDBRMDescriptor.h  CDBRMTexture.cpp  CDBRMTexture.h  CDBTile.cpp  CDBTile.h  CDBTileset.cpp  CDBTileset.h  CDBTilesetBuilder.cpp  CDBTilesetBuilder.h  CDBTo3DTiles.cpp  ConverterImpl.cpp  ConverterImpl.h  Gltf.cpp  Gltf.h  Scene.cpp  Scene.h  TileFormatIO.cpp  TileFormatIO.h  Utility.h
CLI/: CMakeLists.txt  main.cpp  main.cpp.autosave
Core/: AABB.h  BoundRegion.h  CMakeLists.txt  Cartographic.h  Ellipsoid.cpp  Ellipsoid.h  FLTLoader.cpp  FLTLoader.h  GDALDatasetWrapper.cpp  GDALDatasetWrapper.h  GDALImage.cpp  GDALImage.h  TIFLoader.cpp  TIFLoader.h  TerrainMesh.h
Core/include/: BoundingRegion.h  Cartographic.h  Ellipsoid.h  EllipsoidTangentPlane.h  FileUtil.h  GlobeRectangle.h  IntersectionTests.h  Math.h  Plane.h  Ray.h  Transforms.h
Core/src/: BoundingRegion.cpp  Cartographic.cpp  Ellipsoid.cpp  EllipsoidTangentPlane.cpp  FileUtil.cpp  GlobeRectangle.cpp  IntersectionTests.cpp  Math.cpp  MathHelpers.cpp  MathLib.cpp  MathUtility.cpp  Plane.cpp  Ray.cpp  Transforms.cpp
Main/: CMakeLists.txt  main.cpp
Tests/: CDBElevationTest.cpp  CDBGSModelsTest.cpp  CDBGTModelsTest.cpp  CDBGeoCellTest.cpp  CDBGeometryVectorsTest.cpp  CDBTileTest.cpp  CDBTilesetBuilderTest.cpp  CDBTilesetTest.cpp  CMakeLists.txt  CombineTilesetsTest.cpp  Config.h  GltfTest.cpp  main.cpp
Tests/Data/CombineTilesets/: VerifiedSubtree.json
Tests/Data/CombineTilesets/GTModel/500_GTModelGeometry/A_Culture/L_Misc_Feature/015_Building/: D500_S001_T001_AL015_000_coronado_bridge.flt  D503_S001_T001_AL015_000_coronado_bridge.xml
Tests/Data/CombineTilesets/GTModel/500_GTModelGeometry/E_Vegetation/C_Woodland/030_Trees/: D503_S001_T001_EC030_012_coniferous_tree01.xml
Tests/Data/CombineTilesets/GTModel/501_GTModelTexture/C/O/ComericaBankSanDiego/: D501_S001_T001_W04_ComericaBankSanDiego.rgb  D501_S001_T001_W06_ComericaBankSanDiego.rgb
Tests/Data/CombineTilesets/GTModel/501_GTModelTexture/C/O/coronado_bridge/: D501_S001_T001_W04_coronado_bridge.rgb  D501_S001_T001_W08_coronado_bridge.rgb
Tests/Data/CombineTilesets/GTModel/501_GTModelTexture/C/O/coronado_bridgeside/: D501_S001_T001_W02_coronado_bridgeside.rgb  D501_S001_T001_W04_coronado_bridgeside.rgb
Tests/Data/CombineTilesets/GTModel/501_GTModelTexture/T/R/tree/: D501_S001_T001_W01_tree.rgb  D501_S001_T001_W07_tree.rgb  D501_S001_T001_W08_tree.rgb
Tests/Data/CombineTilesetsSmallElevation/GTModel/500_GTModelGeometry/E_Vegetation/C_Woodland/030_Trees/: D500_S001_T001_EC030_012_coniferous_tree01.flt  D500_S001_T001_EC030_017_palm_tree01.flt
Tests/Data/CombineTilesetsSmallElevation/GTModel/501_GTModelTexture/C/O/ComericaBankSanDiego/: D501_S001_T001_W00_ComericaBankSanDiego.rgb  D501_S001_T001_W03_ComericaBankSanDiego.rgb  D501_S001_T001_W05_ComericaBankSanDiego.rgb  D501_S001_T001_W08_ComericaBankSanDiego.rgb  D501_S001_T001_W09_ComericaBankSanDiego.rgb  D501_S001_T001_W10_ComericaBankSanDiego.rgb
Tests/Data/CombineTilesetsSmallElevation/GTModel/501_GTModelTexture/C/O/coronado_bridge/: D501_S001_T001_W00_coronado_bridge.rgb  D501_S001_T001_W01_coronado_bridge.rgb  D501_S001_T001_W05_coronado_bridge.rgb
Tests/Data/CombineTilesetsSmallElevation/GTModel/501_GTModelTexture/C/O/coronado_bridgeroad/: D501_S001_T001_W00_coronado_bridgeroad.rgb  D501_S001_T001_W01_coronado_bridgeroad.rgb  D501_S001_T001_W03_coronado_bridgeroad.rgb  D501_S001_T001_W06_coronado_bridgeroad.rgb
Tests/Data/CombineTilesetsSmallElevation/GTModel/501_GTModelTexture/C/O/coronado_bridgeside/: D501_S001_T001_W00_coronado_bridgeside.rgb  D501_S001_T001_W01_coronado_bridgeside.rgb  D501_S001_T001_W06_coronado_bridgeside.rgb  D501_S001_T001_W07_coronado_bridgeside.rgb
Tests/Data/CombineTilesetsSmallElevation/GTModel/501_GTModelTexture/T/R/tree/: D501_S001_T001_W00_tree.rgb  D501_S001_T001_W02_tree.rgb  D501_S001_T001_W03_tree.rgb  D501_S001_T001_W05_tree.rgb  D501_S001_T001_W06_tree.rgb  D501_S001_T001_W09_tree.rgb  D501_S001_T001_W09_tree.rgb.attr
Tests/Data/Elevation/: N34W119_D001_S001_T001_LC06_U0_R0.tif
Tests/Data/ElevationMoreLODNegativeImagery/: VerifiedTileset.json
Tests/Data/ElevationMoreLODPositiveImagery/: VerifiedTileset.json
Tests/Data/ElevationWithRMTextureRMDescriptor/Metadata/: Materials.xml
Tests/Data/GSModelsWithGTModelTexture/: VerifiedTileset.json
Tests/Data/GSModelsWithGTModelTexture/GTModel/501_GTModelTexture/A/T/AT_T/: D501_S001_T001_W01_AT_T.rgb  D501_S001_T001_W02_AT_T.rgb  D501_S001_T001_W03_AT_T.rgb  D501_S001_T001_W04_AT_T.rgb  D501_S001_T001_W05_AT_T.rgb  D501_S001_T001_W06_AT_T.rgb  D501_S001_T001_W07_AT_T.rgb  D501_S001_T001_W08_AT_T.rgb  D501_S001_T001_W09_AT_T.rgb
Tests/Data/GSModelsWithGTModelTexture/GTModel/501_GTModelTexture/A/T/AT_T_0/: D501_S001_T001_W00_AT_T_0.rgb  D501_S001_T001_W01_AT_T_0.rgb  D501_S001_T001_W02_AT_T_0.rgb  D501_S001_T001_W03_AT_T_0.rgb  D501_S001_T001_W04_AT_T_0.rgb  D501_S001_T001_W05_AT_T_0.rgb  D501_S001_T001_W06_AT_T_0.rgb  D501_S001_T001_W07_AT_T_0.rgb  D501_S001_T001_W08_AT_T_0.rgb
Tests/Data/GSModelsWithGTModelTexture/GTModel/501_GTModelTexture/A/T/AT_T_1/: D501_S001_T001_W01_AT_T_1.rgb  D501_S001_T001_W02_AT_T_1.rgb  D501_S001_T001_W03_AT_T_1.rgb  (+6 more)
Tests/Data/GTModels/: VerifiedBridgeTileset.json  VerifiedTreeTileset.json
Tests/Data/ImageryMoreLODNegativeElevation/: VerifiedTileset.json
Tests/Data/ImageryMoreLODPositiveElevation/: VerifiedTileset.json
(+645 files in other folders)
